# sphinx-store

./: README.md  meson.build
qml/: main.qml
src/: main.cpp
